--- a/config/blacklight.yml
+++ b/config/blacklight.yml
@@ -1,6 +1,6 @@
 # This is a sample config file that points to a solr server for each environment
 development:
-  url: http://localhost:8983/solr/development
+  url: http://localhost:8080/hydra/collection1
 test:
   url: <%= "http://127.0.0.1:#{ENV['TEST_JETTY_PORT'] || 8983}/solr/test" %>
 production:
