--- a/config/blacklight.yml
+++ b/config/blacklight.yml
@@ -2,6 +2,6 @@
 development:
   url: http://localhost:8080/hydra/collection1
 test:
-  url: <%= "http://127.0.0.1:#{ENV['TEST_JETTY_PORT'] || 8983}/solr/test" %>
+  url: http://localhost:8080/hydra/test
 production:
   url: http://your.production.server:8080/bl_solr/core0
