--- a/config/blacklight.yml
+++ b/config/blacklight.yml
@@ -1,7 +1,7 @@
 # This is a sample config file that points to a solr server for each environment
 development:
-  url: http://localhost:8080/hydra/collection1
+  url: http://127.0.0.1:8983/solr/collection1
 test:
-  url: http://localhost:8080/hydra/test
+  url: http://127.0.0.1:8983/solr/test
 production:
   url: http://your.production.server:8080/bl_solr/core0
