--- a/config/solr.yml
+++ b/config/solr.yml
@@ -1,4 +1,4 @@
 development:
-  url: http://127.0.0.1:8080/hydra
+  url: http://127.0.0.1:8983/solr/collection1
 test:
-  url: http://127.0.0.1:8080/hydra/test
+  url: http://127.0.0.1:8983/solr/test
