--- a/config/blacklight.yml
+++ b/config/blacklight.yml
@@ -1,7 +1,7 @@
 # This is a sample config file that points to a solr server for each environment
 development:
   adapter: solr
-  url: http://127.0.0.1:8983/solr/collection1
+  url: http://127.0.0.1:8983/solr/hydra-development
 test:
   adapter: solr
   url: http://127.0.0.1:8983/solr/test
