--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -1,12 +1,12 @@
 development:
   user: fedoraAdmin
   password: fedoraAdmin
-  url: http://127.0.0.1:8080/fedora/rest
+  url: http://127.0.0.1:8080/rest
   base_path: /dev
 test:
   user: fedoraAdmin
   password: fedoraAdmin
-  url: http://127.0.0.1:8080/fedora/rest
+  url: http://127.0.0.1:8080/rest
   base_path: /test
 production:
   user: fedoraAdmin
