add byebug_history to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@
 # human-generated below!
 /jetty
 /.vagrant
+/.byebug_history
 /ansible
-config/secrets.yml
-config/solr.yml
-config/fedora.yml
-config/blacklight.yml
+/config/secrets.yml
+/config/solr.yml
+/config/fedora.yml
+/config/blacklight.yml
