--- a/config/blacklight.yml
+++ b/config/blacklight.yml
@@ -4,7 +4,7 @@ development:
   url: http://127.0.0.1:8983/solr/hydra-development
 test:
   adapter: solr
-  url: http://127.0.0.1:8983/solr/test
+  url: http://127.0.0.1:8985/solr/hydra-test
 production:
   adapter: solr
   url: http://your.production.server:8080/bl_solr/core0
