--- a/config/solr.yml
+++ b/config/solr.yml
@@ -1,4 +1,4 @@
 development:
   url: http://127.0.0.1:8983/solr/hydra-development
 test:
-  url: http://127.0.0.1:8983/solr/test
+  url: http://127.0.0.1:8985/solr/hydra-test
