--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -1,15 +1,15 @@
 development:
-  user: fedoraAdmin
-  password: fedoraAdmin
-  url: http://127.0.0.1:8080/rest
-  base_path: /dev
+  user: <%= ENV['HYDRA_FEDORA_USER_DEVELOPMENT'] || 'fedoraAdmin' %>
+  password: <%= ENV['HYDRA_FEDORA_PASSWORD_DEVELOPMENT'] || 'fedoraAdmin' %>
+  url: <%= ENV['HYDRA_FEDORA_URL_DEVELOPMENT'] || 'http://127.0.0.1:8080/rest' %>
+  base_path: <%= ENV['HYDRA_FEDORA_BASE_PATH_DEVELOPMENT'] || '/dev' %>
 test:
-  user: fedoraAdmin
-  password: fedoraAdmin
-  url: http://127.0.0.1:8986/rest
-  base_path: /test
+  user: <%= ENV['HYDRA_FEDORA_USER_TEST'] || 'fedoraAdmin' %>
+  password: <%= ENV['HYDRA_FEDORA_PASSWORD_TEST'] || 'fedoraAdmin' %>
+  url: <%= ENV['HYDRA_FEDORA_URL_TEST'] || 'http://127.0.0.1:8986/rest' %>
+  base_path: <%= ENV['HYDRA_FEDORA_BASE_PATH_TEST'] || '/test' %>
 production:
-  user: fedoraAdmin
-  password: fedoraAdmin
+  user: 'fedoraAdmin'
+  password: 'fedoraAdmin'
   url: http://127.0.0.1:8983/fedora/rest
   base_path: /prod
