--- a/config/solr.yml
+++ b/config/solr.yml
@@ -1,4 +1,4 @@
 development:
-  url: http://127.0.0.1:8983/solr/hydra-development
+  url: <%= ENV['HYDRA_SOLR_URL_DEVELOPMENT'] || 'http://127.0.0.1:8983/solr/hydra-development' %>
 test:
-  url: http://127.0.0.1:8985/solr/hydra-test
+  url: <%= ENV['HYDRA_SOLR_URL_TEST'] || 'http://127.0.0.1:8985/solr/hydra-test' %>
