--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 sudo: false
-script: rake dev:spec_with_app_load
+script: bundle exec rake dev:spec_with_app_load
 rvm:
   - 2.3.1
 cache:
