travis cache local ./tmp/solr_dist as intended

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ rvm:
 cache:
   bundler: true
   directories:
-    - /tmp/solr_dist
+    - ./tmp/solr_dist
 before_script:
   - jdk_switcher use oraclejdk8
