--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: ruby
 sudo: false
+branches:
+  except:
+    - jrochkind_sandbox
 script: bundle exec rake dev:spec_with_app_load
 rvm:
   - 2.3.1
