comment on config/resource_types.yml pointing to GH discussion

--- a/config/authorities/resource_types.yml
+++ b/config/authorities/resource_types.yml
@@ -1,3 +1,4 @@
+# This is a bit non-standard, see https://github.com/chemheritage/chf-sufia/issues/234#issuecomment-291967455
 terms:
   - id: Image
     term: Image
