Environment configuration to use in ruby profiling

--- a/config/blacklight.yml
+++ b/config/blacklight.yml
@@ -3,6 +3,9 @@
 development:
   adapter: solr
   url: <%= ENV['HYDRA_SOLR_URL_DEVELOPMENT'] || 'http://127.0.0.1:8983/solr/hydra-development' %>
+profile:
+  adapter: solr
+  url: <%= ENV['HYDRA_SOLR_URL_DEVELOPMENT'] || 'http://127.0.0.1:8983/solr/hydra-development' %>
 test:
   adapter: solr
   url: <%= ENV['HYDRA_SOLR_URL_TEST'] || 'http://127.0.0.1:8985/solr/hydra-test' %>
