--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,9 @@ default: &default
 development:
   <<: *default
   database: db/development.sqlite3
+profile:
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
