--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -3,6 +3,11 @@ development:
   password: <%= ENV['HYDRA_FEDORA_PASSWORD_DEVELOPMENT'] || 'fedoraAdmin' %>
   url: <%= ENV['HYDRA_FEDORA_URL_DEVELOPMENT'] || 'http://127.0.0.1:8080/rest' %>
   base_path: <%= ENV['HYDRA_FEDORA_BASE_PATH_DEVELOPMENT'] || '/dev' %>
+profile:
+  user: <%= ENV['HYDRA_FEDORA_USER_DEVELOPMENT'] || 'fedoraAdmin' %>
+  password: <%= ENV['HYDRA_FEDORA_PASSWORD_DEVELOPMENT'] || 'fedoraAdmin' %>
+  url: <%= ENV['HYDRA_FEDORA_URL_DEVELOPMENT'] || 'http://127.0.0.1:8080/rest' %>
+  base_path: <%= ENV['HYDRA_FEDORA_BASE_PATH_DEVELOPMENT'] || '/dev' %>
 test:
   user: <%= ENV['HYDRA_FEDORA_USER_TEST'] || 'fedoraAdmin' %>
   password: <%= ENV['HYDRA_FEDORA_PASSWORD_TEST'] || 'fedoraAdmin' %>
