--- a/config/solr.yml
+++ b/config/solr.yml
@@ -1,4 +1,6 @@
 development:
   url: <%= ENV['HYDRA_SOLR_URL_DEVELOPMENT'] || 'http://127.0.0.1:8983/solr/hydra-development' %>
+profile:
+  url: <%= ENV['HYDRA_SOLR_URL_DEVELOPMENT'] || 'http://127.0.0.1:8983/solr/hydra-development' %>
 test:
   url: <%= ENV['HYDRA_SOLR_URL_TEST'] || 'http://127.0.0.1:8985/solr/hydra-test' %>
