--- a/config/honeybadger.yml
+++ b/config/honeybadger.yml
@@ -1,2 +1,5 @@
 ---
-api_key: '0afd1773'
+api_key: <%= CHF::Env.lookup(:honeybadger_api_key) %>
+
+
+# http://docs.honeybadger.io/ruby/gem-reference/configuration.html
