change hard-coded catalog links for rebrand URLs

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -12,8 +12,8 @@
 
 common: &common
   # Sierra connection, see https://chemheritage.atlassian.net/wiki/spaces/HDCSD/pages/13828102/Sierra+API
-  sierra_host: https://othmerlib.chemheritage.org
-  sierra_key: # get from ansible, or another developer, or 
+  sierra_host: https://othmerlib.sciencehistory.org
+  sierra_key: # get from ansible, or another developer, or
   sierra_secret: # get from ansible, or another developer
 
 development:
