change key name from ingest_bucket to upload_bucket

--- a/config/browse_everything_providers.yml
+++ b/config/browse_everything_providers.yml
@@ -16,7 +16,7 @@
 #   :client_secret: YOUR_GOOGLE_API_CLIENT_SECRET
 
 scihist_s3:
-  :bucket: "<%= CHF::Env.lookup(:ingest_bucket) %>"
+  :bucket: "<%= CHF::Env.lookup(:upload_bucket) %>"
   :response_type: :signed_url # set to :public_url for public urls or :s3_uri for an s3://BUCKET/KEY uri
   :app_key: "<%= CHF::Env.lookup(:aws_access_key_id) %>"       # :app_key, :app_secret, and :region can be specified
   :app_secret: "<%= CHF::Env.lookup(:aws_secret_access_key) %>" # explicitly here, or left out to use system-configured
